--- a/web/style/estilos.css
+++ b/web/style/estilos.css
@@ -1,5 +1,6 @@
 :root {
-    --main-color: linear-gradient(rgb(102, 179, 230), rgba(67, 165, 160, 0.5));
+    /* --main-color: linear-gradient(rgb(102, 179, 230), rgba(67, 165, 160, 0.5)); */
+    --main-color: linear-gradient(rgb(165, 101, 42), rgba(105, 36, 9, 0.5));
     --main-light-color: linear-gradient(
         rgba(102, 179, 230, 0.6),
         rgba(67, 165, 160, 0.3)
@@ -8,9 +9,11 @@
     --text-var-color-dark: rgb(18, 58, 85);
     --main-text-color: white;
     --main-dark-text-color: rgb(66, 66, 66);
-    --second-text-color: rgb(255, 166, 0, 0.8);
-    --bg-color: azure;
+    --second-text-color: rgb(152, 200, 255); /*rgb(255, 166, 0, 0.8);*/
+    /* --bg-color: azure; */
+    --bg-color: rgba(252, 245, 243, 0.1);
     --bg-card: rgba(89, 161, 139, 0.1);
+    --bg-form: rgb(255, 247, 241);
     --btn-red: rgb(212, 93, 93);
     --bg-color-green: rgb(123, 192, 123);
     --text-color-green: rgb(60, 112, 60);
@@ -101,7 +104,7 @@ a {
     left: 0;
     width: 100%;
     text-align: center;
-    color: var(--bg-color);
+    color: white;
 }
 
 .banner-top figcaption {
@@ -113,29 +116,30 @@ a {
 }
 
 .banner-top span {
-    background-color: rgba(10, 10, 10, 0.3);
+    background-color: rgba(13, 59, 97, 0.4);
     height: 100%;
     transition: background 0.5s, color 0.2s;
 }
-.banner-top:hover span {
+
+/* .banner-top:hover span {
     background-color: rgba(31, 72, 100, 0.7);
-}
+} */
 
 .banner-top img {
     width: 100%;
 }
 
-.formulario {
+/* .formulario {
     border-radius: 0.3em;
     background-image: var(--main-light-color);
 }
 
 .formulario h2 {
     color: var(--main-text-color);
-}
+} */
 
 .table-theme {
-    background-image: var(--main-light-color);
+    /* background-color: white; */
     border-radius: 0.3em;
 }
 
@@ -158,7 +162,8 @@ a {
 }
 
 #start-session {
-    background-image: url(https://imnc.org.mx/wp-content/uploads/2017/06/spa.jpg);
+    background-color: var(--bg-color);
+    background-image: url(../assets/images/background-index.png);
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 100vh;
@@ -169,7 +174,6 @@ a {
 
 .login-container {
     position: absolute;
-    content: "";
     top: 0;
     left: 0;
     width: 100%;
@@ -181,10 +185,6 @@ a {
     background-color: rgba(37, 69, 77, 0.3);
 }
 
-.login h1 {
-    color: var(--bg-color);
-}
-
 .login [type="text"],
 .login [type="password"] {
     background-color: var(--bg-color);
@@ -194,9 +194,8 @@ a {
     display: block;
     position: absolute;
     border-radius: 0.5em;
-    background-color: rgba(75, 110, 119, 0.4);
+    background-color: rgb(228, 241, 241, 0.8);
     box-shadow: 0 0 1em;
-    transition: transform 0.5s;
 }
 
 .main-modal {
@@ -221,7 +220,7 @@ a {
     position: absolute;
     transform: translateY(-100%);
     border-radius: 0.5em;
-    background-color: azure;
+    background-color: var(--bg-form);
     box-shadow: 0 0 1em;
     transition: transform 0.5s;
 }
@@ -232,10 +231,14 @@ a {
     z-index: 10;
 }
 
+.title-form {
+    text-align: center;
+    color: var(--text-var-color-dark);
+}
+
 .formulario [type="submit"],
 .confirm,
-.update,
-.login [type="submit"] {
+.update {
     opacity: 0.8;
     background-color: var(--bg-card);
     color: var(--text-var-color-dark);
@@ -245,8 +248,7 @@ a {
 
 .formulario [type="submit"]:hover,
 .confirm:hover,
-.update:hover,
-.login [type="submit"]:hover {
+.update:hover {
     opacity: 1;
     background-color: var(--text-var-color);
     color: white;
@@ -272,6 +274,12 @@ a {
     border: 1px solid var(--btn-red);
 }
 
+.delete,
+.update,
+.delete:hover,
+.update:hover {
+    border: 0;
+}
 .active .formulario {
     transform: translateY(0);
 }
@@ -303,6 +311,32 @@ a {
 
 .large-fila td:last-child {
     padding-top: 1.3rem;
+}
+
+.login [type="submit"] {
+    opacity: 0.8;
+    background-color: var(--text-var-color);
+    color: white;
+    transition: background 0.3s;
+    border: 2px solid var(--text-var-color-dark);
+}
+
+.login [type="submit"]:hover {
+    background-color: var(--text-var-color-dark);
+}
+
+.container-logo {
+    position: relative;
+    max-height: 25vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container-logo img {
+    width: 50%;
+    max-width: 400px;
+    opacity: 0.8;
 }
 
 /* #carousel-images {
