--- a/web/style/estilos.css
+++ b/web/style/estilos.css
@@ -244,7 +244,7 @@ a {
     color: var(--text-var-color-dark);
 }
 
-.formulario [type="submit"],
+.create,
 .confirm,
 .update {
     opacity: 0.8;
@@ -254,7 +254,7 @@ a {
     border: 1px solid;
 }
 
-.formulario [type="submit"]:hover,
+.create:hover,
 .confirm:hover,
 .update:hover {
     opacity: 1;
@@ -345,6 +345,11 @@ a {
     width: 50%;
     max-width: 400px;
     opacity: 0.8;
+}
+
+.estilos {
+    height: 1px;
+    width: 100px;
 }
 
 /* #carousel-images {
